--- a/eureka-demo/build.gradle
+++ b/eureka-demo/build.gradle
@@ -1,18 +1,37 @@
 buildscript {
     ext {
         springBootVersion = '1.5.18.BUILD-SNAPSHOT'
-        springCloudVersion = 'Edgware.BUILD-SNAPSHOT'
+        springCloudVersion = 'Edgware.SR5'
     }
     repositories {
+        mavenLocal()
         mavenCentral()
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
     }
+
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
+
 }
+
 subprojects {
+
+    buildscript {
+        ext {
+            springBootVersion = '1.5.18.BUILD-SNAPSHOT'
+        }
+        repositories {
+            mavenLocal()
+            mavenCentral()
+            maven { url "https://repo.spring.io/snapshot" }
+            maven { url "https://repo.spring.io/milestone" }
+        }
+        dependencies {
+            classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        }
+    }
     apply plugin: 'java'
     apply plugin: 'eclipse'
     apply plugin: 'org.springframework.boot'
@@ -23,14 +42,19 @@ subprojects {
     sourceCompatibility = 1.8
 
     repositories {
+        mavenLocal()
         mavenCentral()
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
     }
 
+    ext {
+        springCloudVersion = 'Edgware.SR5'
+    }
+
     dependencies {
-        implementation('org.springframework.boot:spring-boot-starter-actuator')
-        implementation('org.springframework.boot:spring-boot-starter-web')
+        compile('org.springframework.boot:spring-boot-starter-actuator')
+        compile('org.springframework.boot:spring-boot-starter-web')
         testImplementation('org.springframework.boot:spring-boot-starter-test')
     }
 
