--- a/eureka-demo/eureka-server/src/main/resources/application.properties
+++ b/eureka-demo/eureka-server/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.application.name=spring-cloud-eureka-server
 server.port=9090
 
 # 在顶层eureka中，不需要把它注册到其它eureka服务。
-# 配置这个服务是否要注册到其他eureka服务上，用来被别的服务发现，例子中我们不需要被别的服务发现
+# 配置这个服务是否要注册到其他eureka服务上，用来被别的服务发现，本例中我们不需要被别的服务发现
 eureka.client.register-with-eureka=false
 # 显示这个客户端是否需要从eureka server取回注册信息
 eureka.client.fetch-registry=false
 # eureka Server服务的url，用户客户端注册，可以用多个，逗号分隔。
 eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka/
+# 设置为false，否则eureka服务注册中心页面是xml形式，具体原因不清楚
 spring.freemarker.prefer-file-system-access=false
