--- a/eureka-demo/settings.gradle
+++ b/eureka-demo/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'eureka-demo'
 include 'eureka-server'
 include 'eureka-client-user-api'
 include 'eureka-client-user-service-consumer'
+include 'eureka-client-user-service-provider'
 
